# rusty_apple_mail_mcp

./: .gitignore  Cargo.toml  README.md
.github/skills/mcp-design/: SKILL.md
.github/workflows/: ci.yml
crates/rusty_apple_mail_mcp/: Cargo.toml
crates/rusty_apple_mail_mcp/src/: config.rs  error.rs  lib.rs  mail.rs  main.rs  runner.rs
crates/rusty_apple_mail_mcp/src/cli/: commands.rs
crates/rusty_apple_mail_mcp/src/domain/: attachment.rs
crates/rusty_apple_mail_mcp/src/mail/: docx.rs  pptx.rs
crates/rusty_apple_mail_mcp/src/server/tools/: get_message.rs  list_accounts.rs  list_mailboxes.rs  search_messages.rs
src/: accounts.rs  cli.rs  config.rs  db.rs  error.rs  lib.rs  mail.rs  main.rs  runner.rs  server.rs
src/db/: accounts.rs  connection.rs  epoch.rs  mailboxes.rs  messages.rs  mod.rs  queries.rs
src/domain/: attachment.rs  message.rs  mod.rs
src/mail/: cache.rs  docx.rs  extractor.rs  locator.rs  mod.rs  parser.rs  pdf.rs  pptx.rs  xlsx.rs
src/server/: handler.rs  tools.rs
src/server/tools/: get_attachment.rs  get_message.rs  list_accounts.rs  list_mailboxes.rs  message_lookup.rs  mod.rs  search_messages.rs
tests/: integration_test.rs
tests/support/: mod.rs
