[package]
name = "rusty_apple_mail_mcp"
version = "1.3.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "rusty_apple_mail_mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.52.1", features = [
  "rt-multi-thread",
  "macros",
  "io-util"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
walkdir = "2.5.0"
mail-parser = "0.11.2"
schemars = "1.2.1"
once_cell = "1.21.4"
lru = "0.17.0"
scraper = "0.26.0"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
csv = "1.4.0"
lopdf = "0.40.0"
clap = { version = "4.6.1", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 16

[profile.dev.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
