[package]
name = "rusty_apple_mail_mcp"
version = "1.3.0"
edition = "2024"

[[bin]]
name = "rusty_apple_mail_mcp"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
mail-parser = { workspace = true }
schemars = { workspace = true }
once_cell = { workspace = true }
lru = { workspace = true }
scraper = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
csv = { workspace = true }
lopdf = { workspace = true }
clap = { workspace = true }
rmcp = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
